--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ nav{
 
 a{
     text-decoration: none;
-    color: #A3CEF1;
+    color: #8ab5d8;
     font-weight: 600;
     transition: 0.3s ease, opacity 0.3s ease;
 }
@@ -240,7 +240,9 @@ section{
     margin-top: 2em;
 }
 
-
+table{
+    width: 100%;
+}
 
 .falling-icons {
     position: absolute;
